# scales-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
examples/: main.rs
src/: lib.rs
