[package]
name = "rp-pico-clock-green"
version = "0.0.1"
authors = ["crjeder <crjeder@gmail.com>"]
# repository = "https://github.com/crjeder/hx711_spi"
readme = "README.md"
# documentation = "https://docs.rs/hx711_spi"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Board Support Package for the Raspberry Pi Pico Clock Green"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rp-pico = "0.7.0"
rp2040-hal = "0.8.0"
# embedded-graphics = "0.7.1"

# [dev-dependencies]

# [features]

# [[example]]

