[package]
name = "scales-rs"
version = "0.0.1"
authors = ["crjeder <crjeder@gmail.com>"]
repository = "https://github.com/crjeder/scales-rs"
readme = "README.md"
# documentation = "https://docs.rs/scales-rs"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Trivial scales crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "1.1.0"

# [dev-dependencies]

# [features]

# [[example]]

