[package]
name = "scales-rs"
version = "0.0.1"
authors = ["crjeder <crjeder@gmail.com>"]
repository = "https://github.com/crjeder/scales-rs"
readme = "README.md"
# documentation = "https://docs.rs/scales-rs"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Trivial scales crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# [dev-dependencies]
embedded-hal-mock = "0.9.0"
hx711_spi = "0.5"
embedded-hal = "0.2.7"


# [[example]]

